--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ShowNet</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
   </head>
-  <body>
-    <div class="container">
+  <body class="d-flex h-100 text-center text-bg-dark">
+    <div class="main container">
+      <!-- <h1>ShowNet is Closed</h1> -->
+      <img src="./images/bg.jpeg" class="img-fluid" alt="ShowNet 2025">
+      <div class="overlay">
+	<h1 id="title" class="display-5">今年のShowNet は終了しました。<br>また来年お会いしましょう！</h1>
+      </div>
     </div>
 
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
